# triplanar_attention_mechanism

./: LICENSE  README.md  pyproject.toml
results/: metrics_03.csv
results/scripts/: runTAM.py  visualise_metrics.py
triplanar_attention_mechanism/: __init__.py  layers.py  layers_3dconv.py  loss_functions.py  networks.py  networks_TAM.py
